welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (fonctionTest())
                   ^